--- a/SizceHaber/Views/AdminCategory/CategoryListMenu.cshtml
+++ b/SizceHaber/Views/AdminCategory/CategoryListMenu.cshtml
@@ -1,4 +1,5 @@
 ﻿
+
 @using EntityLayer.Concrete
 @model List<Category>
 <div class="col-md-2">
@@ -14,15 +15,25 @@
         </div>
         <div class="card-body p-0">
             <ul class="nav nav-pills flex-column">
+                <li class="nav-item d-none d-sm-inline-block">
+                    <a href="/Content/GetAllContent" class="nav-link">
+                        <i class="far fa-circle" style="color:black;"></i>
+                        Hepsi
+
+                    </a>
+                </li>
                 @foreach (var item in Model)
                 {
-                    <li class="nav-item d-none d-sm-inline-block">
-                        <a href="/Content/GetListByCategory/@item.CategoryID" class="nav-link">
-                            <i class="far fa-circle" style="color:@item.CategoryDescription;"></i>
-                            @item.CategoryName
+                    if (item.CategoryStatus)
+                    {
+                        <li class="nav-item d-none d-sm-inline-block">
+                            <a href="/Content/GetListByCategory/@item.CategoryID" class="nav-link">
+                                <i class="far fa-circle" style="color:@item.CategoryDescription;"></i>
+                                @item.CategoryName
 
-                        </a>
-                    </li>
+                            </a>
+                        </li>
+                    }
                 }
             </ul>
         </div>
@@ -30,5 +41,6 @@
     </div>
     <!-- /.card -->
 </div>
+
 
 
