--- a/SizceHaber/Views/Login/Index.cshtml
+++ b/SizceHaber/Views/Login/Index.cshtml
@@ -103,7 +103,7 @@
                                 <a href="#" class="px-2 py-2 ml-md-1 rounded"><span class="ion-logo-twitter mr-2"></span> Twitter</a>
                             </div>*@
                         <div class="w-100 text-center mt-4 text">
-                            <a href="#">Ana Sayfaya Dön</a>
+                            <a href="/Home/HomePage">Ana Sayfaya Dön</a>
                         </div>
 
 
