--- a/SizceHaber/Views/Message/GetSendboxMessageDetails.cshtml
+++ b/SizceHaber/Views/Message/GetSendboxMessageDetails.cshtml
@@ -6,37 +6,34 @@
 
 <!DOCTYPE html>
 <html>
-
+<head>
+    <style>
+        .padding-100 {
+            padding: 100px;
+            padding-top: 0px;
+        }
+    </style>
+</head>
 <body class="hold-transition sidebar-mini">
     <!-- Content Header (Page header) -->
-    <section class="content-header">
+    <section class="content-header padding-100" style="padding-bottom:0px;">
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1>Gönerilen Mesaj Detayları</h1>
-                </div>
-                <div class="col-sm-6">
-                    <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item active">Compose</li>
-                    </ol>
+                    <h1 style="margin-bottom:20px;">Gönerilen Mesaj Detayları</h1>
                 </div>
             </div>
         </div><!-- /.container-fluid -->
     </section>
     <!-- Main content -->
-    <section class="content">
+    <section class="content padding-100">
         <div class="container-fluid">
             <div class="row">
                 @Html.Action("MessageListMenu", "Contact")
                 <div class="col-md-9">
-                    <div class="card card-primary card-outline">
+                    <div class="card card-secondary card-outline">
                         <div class="card-header">
                             <h3 class="card-title">Mesaj</h3>
-                            <div class="card-tools">
-                                <a href="#" class="btn btn-tool" data-toggle="tooltip" title="Previous"><i class="fas fa-chevron-left"></i></a>
-                                <a href="#" class="btn btn-tool" data-toggle="tooltip" title="Next"><i class="fas fa-chevron-right"></i></a>
-                            </div>
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body p-0">
