--- a/SizceHaber/Views/Shared/_AdminLayout.cshtml
+++ b/SizceHaber/Views/Shared/_AdminLayout.cshtml
@@ -186,7 +186,7 @@ to get the desired effect
 
                             <li class="nav-item has-treeview">
                                 <a href="/AdminCategory/Index" class="nav-link">
-                                    <i class="nav-icon far fa-list-alt"></i>
+                                    <i class="nav-icon 	fas fa-list"></i>
                                     <p>
                                         Kategoriler
                                     </p>
