--- a/SizceHaber/Views/WriterPanelContent/ContentByHeading.cshtml
+++ b/SizceHaber/Views/WriterPanelContent/ContentByHeading.cshtml
@@ -31,6 +31,24 @@
                         <!-- The time line -->
                         <div class="timeline">
                             <!-- timeline time label -->
+                            <div>
+                                <i class="fas fa-comment bg-yellow"></i>
+                                <div class="timeline-item">
+                                    <h3 class="timeline-header"> </h3>
+                                    <div class="timeline-body">
+                                        <form method="post" action="/WriterPanelContent/NewContent">
+                                            <div>
+                                                <textarea name="ContentValue" class="form-control" placeholder="Bence..."></textarea>
+                                                @*<input type="text" name="ContentValue" class="form-control" placeholder="Bence..." />*@
+                                                <br />
+                                                <input type="hidden" name="HeadingID" class="form-control" value="@ViewBag.headingID" />
+
+                                                <button class="btn btn-dark">Gönder</button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
                             @foreach (var item in Model)
                             {
                                 if (item.ContentStatus == true)
@@ -57,24 +75,7 @@
 
 
                             }
-                            <div>
-                                <i class="fas fa-comment bg-yellow"></i>
-                                <div class="timeline-item">
-                                    <h3 class="timeline-header"> </h3>
-                                    <div class="timeline-body">
-                                        <form method="post" action="/WriterPanelContent/NewContent">
-                                            <div>
 
-                                                <input type="text" name="ContentValue" class="form-control" placeholder="Bence..." />
-                                                <br />
-                                                <input type="hidden" name="HeadingID" class="form-control" value="@ViewBag.headingID" />
-
-                                                <button class="btn btn-dark">Gönder</button>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
 
 
                             <!-- END timeline item -->
