--- a/SizceHaber/Views/Authorization/EditAdmin.cshtml
+++ b/SizceHaber/Views/Authorization/EditAdmin.cshtml
@@ -10,24 +10,31 @@
 
     @using (Html.BeginForm("EditAdmin", "Authorization", FormMethod.Post))
     {
-<div class="form-group">
-    @Html.Label("Admin ID:  ")
-    @Html.DisplayFor(x => x.AdminID, new { @class = "form-control" })
-    <br />
-    @Html.Label("Admin E-mail:  ")
-    @Html.DisplayFor(x => x.AdminUsername, new { @class = "form-control" })
-    @*<br />
-        @Html.Label("Şifre")
-        @Html.TextBoxFor(x => x.AdminPassword, new { @class = "form-control" })*@
-    <br />
-    @Html.Label("Rol")
-    @Html.DropDownListFor(x => x.AdminRole, new List<SelectListItem> {
-                   new SelectListItem { Value = "A" , Text = "Tam yetki" },
-                   new SelectListItem { Value = "B" , Text = "Kısıtlı yetki" } },
-                new { @class = "form-control" })
-    <br />
-    <button class="btn btn-dark">Güncelle</button>
-</div>
+        @Html.HiddenFor(x => x.AdminID)
+        @Html.HiddenFor(x => x.AdminUsername)
+        <div class="form-group row">
+            @Html.Label("Admin ID", new { @class = "col-sm-2 col-form-label" })
+            <div class="col-sm-10">
+                @Html.DisplayFor(x => x.AdminID, new { @class = "form-control" })
+            </div>
+        </div>
+        <div class="form-group row">
+            @Html.Label("E-mail Adresi", new { @class = "col-sm-2 col-form-label" })
+            <div class="col-sm-10">
+                @Html.DisplayFor(x => x.AdminUsername, new { @class = "form-control" })
+            </div>
+        </div>
+        <div class="form-group row">
+            @Html.Label("Rol", new { @class = "col-sm-2 col-form-label" })
+            <div class="col-sm-10">
+                @Html.DropDownListFor(x => x.AdminRole, new List<SelectListItem> {
+                          new SelectListItem { Value = "A" , Text = "Tam yetki" },
+                          new SelectListItem { Value = "B" , Text = "Kısıtlı yetki" } },
+                       new { @class = "form-control" })
+            </div>
+        </div>
+        <br />
+        <button class="btn btn-dark">Güncelle</button>
     }
 
 </section>
