--- a/SizceHaber/Views/Content/CategoryListMenu.cshtml
+++ b/SizceHaber/Views/Content/CategoryListMenu.cshtml
@@ -24,7 +24,8 @@
                 </li>
                 @foreach (var item in Model)
                 {
-
+                    if (item.CategoryStatus)
+                    {
                     <li class="nav-item d-none d-sm-inline-block">
                         <a href="/Content/GetListByCategory/@item.CategoryID" class="nav-link">
                             <i class="far fa-circle" style="color:@item.CategoryDescription;"></i>
@@ -32,6 +33,7 @@
 
                         </a>
                     </li>
+                    }
                 }
             </ul>
         </div>
