--- a/SizceHaber/Views/Content/GetAllContent.cshtml
+++ b/SizceHaber/Views/Content/GetAllContent.cshtml
@@ -31,7 +31,7 @@
     <!-- Main content -->
     <section class="content padding-100">
         <div class="row">
-            @Html.Action("CategoryListMenu", "Content")
+            @Html.Action("CategoryListMenu", "AdminCategory")
             <div class="col-md-9">
                 <div class="container-fluid">
                     @using (Html.BeginForm("GetAllContent", "Content", FormMethod.Post))
