--- a/SizceHaber/Views/Default/ContentListByCategory.cshtml
+++ b/SizceHaber/Views/Default/ContentListByCategory.cshtml
@@ -50,31 +50,11 @@
                                 <!-- timeline time label -->
                                 @foreach (var item in Model)
                                 {
-                                    if (item.ContentStatus)
+                                    if (item.Heading.HeadingStatus && item.ContentStatus)
                                     {
-                                        if (item.Heading.CategoryID == 1)
-                                        {
-                                            color = "#99A3A4";
-                                        }
-                                        else if (item.Heading.CategoryID == 2)
-                                        {
-                                            color = "#CD6155 ";
-                                        }
-                                        else if (item.Heading.CategoryID == 3)
-                                        {
-                                            color = "#A569BD";
-                                        }
-                                        else if (item.Heading.CategoryID == 4)
-                                        {
-                                            color = "#5DADE2";
-                                        }
-                                        else
-                                        {
-                                            color = "#27AE60";
-                                        }
 
                                         <div class="time-label">
-                                            <span style="background-color:@color; width:10rem; text-align:center;"><a style="color:black;" href="/Default/ContentListByCategory/@item.Heading.CategoryID">@item.Heading.Category.CategoryName</a></span>
+                                            <span style="background-color:@item.Heading.Category.CategoryDescription; width:10rem; text-align:center;"><a style="color:black;" href="/Default/ContentListByCategory/@item.Heading.CategoryID">@item.Heading.Category.CategoryName</a></span>
                                         </div>
                                         <!-- /.timeline-label -->
                                         <!-- timeline item -->
