--- a/SizceHaber/Views/Heading/EditHeading.cshtml
+++ b/SizceHaber/Views/Heading/EditHeading.cshtml
@@ -13,10 +13,11 @@
     @Html.HiddenFor(x => x.HeadingID)
     @Html.HiddenFor(x => x.HeadingDate)
     @Html.HiddenFor(x => x.WriterID)
+    @Html.HiddenFor(x => x.HeadingStatus)
     <div class="form-group row">
         @Html.Label("Yazar", new { @class = "col-sm-2 col-form-label" })
         <div class="col-sm-10">
-            @Html.DisplayFor(x => x.Writer.WriterName, new { @class = "form-control" })
+            @Html.DisplayFor(x => x.Writer.WriterName, new { @class = "form-control" }) @Html.DisplayFor(x => x.Writer.WriterSurname, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group row">
