--- a/SizceHaber/Views/Heading/Index.cshtml
+++ b/SizceHaber/Views/Heading/Index.cshtml
@@ -8,24 +8,28 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-@{ string headingStatus = "Pasif";}
+@{ string headingStatus = "Pasif";
+    string color = "red";
+}
 
 <!DOCTYPE html>
-<html >
+<html>
 <head>
     <style>
         .padding-100 {
             padding: 100px;
             padding-top: 10px;
         }
+
         .custom-button {
             margin: 2px;
         }
     </style>
     <link rel="stylesheet" href="~/Content/PagedList.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
-<body class="hold-transition sidebar-mini" >
-  
+<body class="hold-transition sidebar-mini">
+
 
     <!-- Main content -->
     <section class="content padding-100">
@@ -34,14 +38,14 @@
             <div class="col-md-9">
                 <div class="container-fluid">
                     @*@using (Html.BeginForm("Index", "Heading", FormMethod.Post))
-                    {
-                        <div class="d-flex" style="margin-bottom:5px;">
-                            @Html.TextBox("searchedString")
-                            <button class="btn btn-info btn-sm" type="submit" style="border-radius:2px; margin-left:2px;">
-                                <i class="fas fa-search"></i>
-                            </button>
-                        </div>
-                    }*@
+        {
+            <div class="d-flex" style="margin-bottom:5px;">
+                @Html.TextBox("searchedString")
+                <button class="btn btn-info btn-sm" type="submit" style="border-radius:2px; margin-left:2px;">
+                    <i class="fas fa-search"></i>
+                </button>
+            </div>
+        }*@
                     <!-- Default box -->
                     <div class="card">
                         <div class="card-header">
@@ -58,19 +62,19 @@
                                 <thead>
                                     <tr>
 
-                                        <th style="width: 30%">
+                                        <th>
                                             Başlık
                                         </th>
-                                        <th style="width: 15%" class="text-center">
+                                        <th class="text-center">
                                             Oluşturan Yazar
                                         </th>
-                                        <th style="width: 10%" class="text-center">
-                                            Durum
-                                        </th>
-                                        <th style="width: 8%" class="text-center">
+                                        <th class="text-center">
                                             Kategori
                                         </th>
-                                        <th style="width: 30%">
+                                        <th class="text-center">
+                                            Durum
+                                        </th>
+                                        <th>
                                         </th>
                                     </tr>
                                 </thead>
@@ -80,6 +84,7 @@
                                         if (item.HeadingStatus)
                                         {
                                             headingStatus = "Aktif";
+                                            color = "green";
                                         }
                                         <tr>
 
@@ -97,11 +102,17 @@
 
                                             </td>
                                             <td class="text-center">
-                                                @headingStatus
-
+                                                @item.Category.CategoryName
                                             </td>
                                             <td class="text-center">
-                                                @item.Category.CategoryName
+                                                <div class="badge" style="background-color: @color;
+                                                                            color:white;
+                                                                            font-size: 20px;
+                                                                            font-weight: normal">
+                                                    @headingStatus
+                                                </div>
+
+
                                             </td>
                                             <td class="project-actions text-right">
 
@@ -117,12 +128,19 @@
                                                 </a>
                                             </td>
                                         </tr>
+                                        headingStatus = "Pasif";
+                                        color = "red";
                                     }
+
                                 </tbody>
                             </table>
                         </div>
                         <!-- /.card-body -->
                     </div>
+                    @if (TempData["Error"] != null)
+                    {
+                        <script>swal("", "İşlem tamamlanamadı!" + '\n'+"Girdiğiniz başlığın aşağıdaki koşulları sağladığına emin olun:" + '\n' + "- 3 karakterden büyük" + '\n'+"- 250 karakterden küçük", "error");</script>
+                    }
                     <!-- /.card -->
                     @Html.Action("AddHeading", "Heading")
                     <div class="d-flex justify-content-end" style="margin-right: 30px; "> @Html.PagedListPager((IPagedList)Model, k => Url.Action("Index", new { k }))</div>
@@ -131,7 +149,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- /.content -->
     <a id="back-to-top" href="#" class="btn btn-primary back-to-top" role="button" aria-label="Scroll to top">
         <i class="fas fa-chevron-up"></i>
