--- a/SizceHaber/Views/Message/Inbox.cshtml
+++ b/SizceHaber/Views/Message/Inbox.cshtml
@@ -75,17 +75,19 @@
                                                 </div>
                                             </td>
                                             <td class="mailbox-star"><a href="#"><i class="fas fa-star text-warning"></i></a></td>
-                                            <td class="mailbox-name"><a href="/Message/GetInboxMessageDetails/@item.MessageID">@item.SenderMail</a></td>
+                                            <td class="mailbox-name">@item.SenderMail</td>
                                             <td class="mailbox-subject">
-                                                <b>@item.Subject</b> - 
-                                                @if (item.MessageContent.Length < 30)
-                                                {
-                                                    @item.MessageContent
-                                                }
-                                                else
-                                                {
-                                                    @item.MessageContent.Substring(0, 30)
-                                                }...
+                                                <a href="/Message/GetInboxMessageDetails/@item.MessageID">
+                                                    <b>@item.Subject</b> -
+                                                    @if (item.MessageContent.Length < 30)
+                                                    {
+                                                        @item.MessageContent
+                                                    }
+                                                    else
+                                                    {
+                                                        @item.MessageContent.Substring(0, 30)
+                                                    }...
+                                                </a>
                                             </td>
                                             <td class="mailbox-attachment"></td>
                                             <td class="mailbox-date">@(((DateTime)item.MessageDate).ToString("dd MMM yyyy"))</td>
