--- a/SizceHaber/Views/Shared/CategoryListMenu.cshtml
+++ b/SizceHaber/Views/Shared/CategoryListMenu.cshtml
@@ -22,6 +22,8 @@
                 </li>
                 @foreach (var item in Model)
                 {
+                    if (item.CategoryStatus)
+                    {
                     <li class="nav-item d-none d-sm-inline-block">
                         <a href="/WriterPanelHeading/GetListByCategory/@item.CategoryID" class="nav-link">
                             <i class="far fa-circle" style="color:@item.CategoryDescription;"></i>
@@ -29,6 +31,7 @@
 
                         </a>
                     </li>
+                    }
                 }
             </ul>
         </div>
