--- a/SizceHaber/Views/Shared/_WriterLayout.cshtml
+++ b/SizceHaber/Views/Shared/_WriterLayout.cshtml
@@ -106,7 +106,7 @@ to get the desired effect
 
                         <li class="nav-item has-treeview">
                             <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-chart-pie"></i>
+                                <i class="nav-icon fas fa-edit"></i>
                                 <p>
                                     Paylaşımlarım
                                     <i class="right fas fa-angle-right"></i>
@@ -116,7 +116,7 @@ to get the desired effect
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
                                     <a href="/WriterPanelHeading/MyHeading" class="nav-link">
-                                        <i class="nav-icon fas fa-th"></i>
+                                        <i class="nav-icon fas fa-heading"></i>
                                         <p>
                                             Haber Başlıklarım
                                         </p>
@@ -124,7 +124,7 @@ to get the desired effect
                                 </li>
                                 <li class="nav-item">
                                     <a href="/paylasimlarim" class="nav-link">
-                                        <i class="nav-icon fas fa-calendar-alt"></i>
+                                        <i class="nav-icon fa fa-quote-left"></i>
                                         <p>
                                             Bence
                                         </p>
@@ -135,7 +135,7 @@ to get the desired effect
 
                         <li class="nav-item has-treeview">
                             <a href="/WriterPanelMessage/Inbox" class="nav-link">
-                                <i class="nav-icon fas fa-edit"></i>
+                                <i class="nav-icon fas fa-envelope"></i>
                                 <p>
                                     Mesajlar
                                 </p>
@@ -143,7 +143,7 @@ to get the desired effect
                         </li>
                         <li class="nav-item has-treeview">
                             <a href="/WriterPanel/WriterProfile" class="nav-link">
-                                <i class="nav-icon fas fa-tachometer-alt"></i>
+                                <i class="nav-icon fas fa-user"></i>
                                 <p>
                                     Profilim
                                 </p>
@@ -151,7 +151,7 @@ to get the desired effect
                         </li>
                         <li class="nav-item has-treeview">
                             <a href="/Login/LogOut" class="nav-link">
-                                <i class="nav-icon far fa-plus-square"></i>
+                                <i class="nav-icon fas fa-sign-out-alt"></i>
                                 <p>
                                     Çıkış Yap
                                 </p>
