--- a/SizceHaber/Views/WriterPanel/WriterProfile.cshtml
+++ b/SizceHaber/Views/WriterPanel/WriterProfile.cshtml
@@ -25,7 +25,7 @@
             .user-image > img {
                 border: 3px solid #ffffff;
                 height: auto;
-                width: 150px;
+                width: 200px;
             }
 
         .user-header {
@@ -71,46 +71,53 @@
                     
                 </div>
                 <div class="user-info">
-                    <div class="form-group row">
                         @Html.HiddenFor(x => x.WriterID)
                         @Html.HiddenFor(x => x.WriterImage)
                         @Html.HiddenFor(x => x.WriterTitle)
                         @Html.HiddenFor(x => x.WriterStatus)
-                        @Html.Label("Ad", new { @class = "col-sm-2 col-form-label" })
-                        <div class="col-sm-10">
-                            @Html.TextBoxFor(x => x.WriterName, new { @class = "form-control" })
+                        @Html.HiddenFor(x => x.WriterMail)
+                        @Html.HiddenFor(x => x.WriterPassword)
+                        <div class="form-group row">
+                            @Html.Label("E-mail Adresi", new { @class = "col-sm-2 col-form-label" })
+                            <div class="col-sm-10">
+                                @Html.DisplayFor(x => x.WriterMail, new { @class = "form-control" })
+                            </div>
                         </div>
-                        @Html.ValidationMessageFor(x => x.WriterName)
-                    </div>
-
-                    <div class="form-group row">
-                        @Html.Label("Soyad", new { @class = "col-sm-2 col-form-label" })
-                        <div class="col-sm-10">
-                            @Html.TextBoxFor(x => x.WriterSurname, new { @class = "form-control" })
+                        <div class="form-group row">
+                            @Html.Label("Ad", new { @class = "col-sm-2 col-form-label" })
+                            <div class="col-sm-10">
+                                @Html.TextBoxFor(x => x.WriterName, new { @class = "form-control" })
+                            </div>
+                            @Html.ValidationMessageFor(x => x.WriterName)
                         </div>
-                        @Html.ValidationMessageFor(x => x.WriterSurname)
-                    </div>
 
-
-                    <div class="form-group row">
-                        @Html.Label("Şifre", new { @class = "col-sm-2 col-form-label" })
-                        <div class="col-sm-10">
-                            <input id="password-field" name="WriterPassword" type="password" class="form-control" placeholder="Şifre" required>
+                        <div class="form-group row">
+                            @Html.Label("Soyad", new { @class = "col-sm-2 col-form-label" })
+                            <div class="col-sm-10">
+                                @Html.TextBoxFor(x => x.WriterSurname, new { @class = "form-control" })
+                            </div>
+                            @Html.ValidationMessageFor(x => x.WriterSurname)
                         </div>
-                        @Html.ValidationMessageFor(x => x.WriterPassword)
-                    </div>
 
-                    <div class="form-group row">
-                        @Html.Label("Hakkında", new { @class = "col-sm-2 col-form-label" })
-                        <div class="col-sm-10">
-                            @Html.TextBoxFor(x => x.WriterAbout, new { @class = "form-control" })
+
+                        @*<div class="form-group row">
+                            @Html.Label("Şifre", new { @class = "col-sm-2 col-form-label" })
+                            <div class="col-sm-10">
+                                <input id="password-field" name="WriterPassword" type="password" class="form-control" placeholder="Şifre">
+                            </div>
+                        </div>*@
+
+                        <div class="form-group row">
+                            @Html.Label("Hakkında", new { @class = "col-sm-2 col-form-label" })
+                            <div class="col-sm-10">
+                                @Html.TextBoxFor(x => x.WriterAbout, new { @class = "form-control" })
+                            </div>
+                            @Html.ValidationMessageFor(x => x.WriterAbout)
                         </div>
-                        @Html.ValidationMessageFor(x => x.WriterAbout)
-                    </div>
-                    <br />
-                    <button class="btn btn-dark">Değişiklikleri Kaydet</button>
+                        <br />
+                        <button class="btn btn-dark">Değişiklikleri Kaydet</button>
 
-                </div>
+                    </div>
             }
         </div>
     </div>
