--- a/SizceHaber/Views/WriterPanelHeading/AllHeadings.cshtml
+++ b/SizceHaber/Views/WriterPanelHeading/AllHeadings.cshtml
@@ -34,6 +34,8 @@
             box-shadow: 0 0 0 #ccc;
             transition: box-shadow .5s;
             margin: 10px;
+            height:22rem;
+            width: auto;
         }
 
             .title:hover {
@@ -73,7 +75,7 @@
 
                             if (item.HeadingStatus)
                             {
-                                <div class="col-lg-3 col-6 ">
+                                <div class="col-lg-4  ">
                                     <!-- small box -->
 
                                     <div class="small-box title" style="background-color: @item.Category.CategoryDescription;">
