--- a/SizceHaber/Views/Contact/MessageListMenu.cshtml
+++ b/SizceHaber/Views/Contact/MessageListMenu.cshtml
@@ -14,13 +14,13 @@
                 <li class="nav-item active">
                     <a href="/Contact/Index" class="nav-link">
                         <i class="fas fa-mail-bulk"></i> İletişim
-                        <span class="badge bg-primary float-right">0</span>
+                        @*<span class="badge bg-primary float-right">0</span>*@
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a href="/Message/Inbox" class="nav-link">
                         <i class="fas fa-inbox"></i> Gelen Mesajlar
-                        <span class="badge bg-primary float-right">12</span>
+                        @*<span class="badge bg-primary float-right">12</span>*@
                     </a>
                 </li>
                 <li class="nav-item">
@@ -36,7 +36,7 @@
                 <li class="nav-item">
                     <a href="#" class="nav-link">
                         <i class="fas fa-filter"></i> Spam
-                        <span class="badge bg-warning float-right">65</span>
+                        @*<span class="badge bg-warning float-right">65</span>*@
                     </a>
                 </li>
                 <li class="nav-item">
